--- a/config/themes.yml
+++ b/config/themes.yml
@@ -2,3 +2,4 @@ default: styles/application.scss
 contrast: styles/contrast.scss
 mastodon-light: styles/mastodon-light.scss
 synthwave: styles/synthwave.scss
+chillstep: styles/chillstep.scss
