Created a new theme.

--- a/config/themes.yml
+++ b/config/themes.yml
@@ -3,3 +3,4 @@ contrast: styles/contrast.scss
 mastodon-light: styles/mastodon-light.scss
 synthwave: styles/synthwave.scss
 chillstep: styles/chillstep.scss
+demogorgon: styles/demogorgon.scss
