Added column width preference.

--- a/.env.vagrant
+++ b/.env.vagrant
@@ -1,5 +1,5 @@
 VAGRANT=true
 LOCAL_DOMAIN=mastodon.local
 
-GIPHY_API_KEY=p3NmxfWoWbXRfJwtfBtehow5YGzTYc6J
-SHOW_GIPHY_LOGO=true
+# GIPHY_API_KEY=
+# SHOW_GIPHY_LOGO=true
