--- a/.env.production.sample
+++ b/.env.production.sample
@@ -232,4 +232,6 @@ STREAMING_CLUSTER_NUM=1
 # ALLOW_ACCESS_TO_HIDDEN_SERVICE=true
 
 # Radical Town Additions
+# Giphy logo is required if you wish to use an unlimited API key.
 # GIPHY_API_KEY =
+# SHOW_GIPHY_LOGO=false
