--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Mastodon",
   "description": "A GNU Social-compatible microblogging server",
-  "repository": "https://github.com/tootsuite/mastodon",
+  "repository": "https://github.com/cambran-era/mastodon",
   "logo": "https://github.com/tootsuite.png",
   "env": {
     "HEROKU": {
