Initial captcha work.

--- a/.env.vagrant
+++ b/.env.vagrant
@@ -5,5 +5,5 @@ GIPHY_API_KEY=
 SHOW_GIPHY_LOGO=true
 
 RECAPTCHA_SITE_KEY=6LdpfnwUAAAAACdxZ1RASjAebETiCvkDUWQ2c0eV
-RECAPTCHA_SECRET_KEY=
+RECAPTCHA_SECRET_KEY=6LdpfnwUAAAAAPJs258olNYUafpBWgE4QR8CUzmR
 RECAPTCHA=false
