--- a/.env.vagrant
+++ b/.env.vagrant
@@ -4,6 +4,7 @@ LOCAL_DOMAIN=mastodon.local
 GIPHY_API_KEY=
 SHOW_GIPHY_LOGO=true
 
-RECAPTCHA_SITE_KEY=6LdpfnwUAAAAACdxZ1RASjAebETiCvkDUWQ2c0eV
-RECAPTCHA_SECRET_KEY=6LdpfnwUAAAAAPJs258olNYUafpBWgE4QR8CUzmR
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
 RECAPTCHA=false
+RECAPTCHA_SCORE_THRESHOLD=0.8
