--- a/config/settings.yml
+++ b/config/settings.yml
@@ -21,7 +21,7 @@ defaults: &defaults
   unfollow_modal: false
   boost_modal: false
   delete_modal: true
-  auto_play_gif: false
+  auto_play_gif: true
   display_media: 'default'
   expand_spoilers: false
   preview_sensitive_media: false
@@ -31,8 +31,8 @@ defaults: &defaults
   noindex: false
   theme: 'default'
   aggregate_reblogs: true
-  enable_markdown: false
-  advanced_layout: false
+  enable_markdown: true
+  advanced_layout: true
   column_width: 'column_relaxed'
   notification_emails:
     follow: false
