--- a/.env.vagrant
+++ b/.env.vagrant
@@ -4,8 +4,4 @@ LOCAL_DOMAIN=mastodon.local
 GIPHY_API_KEY=
 SHOW_GIPHY_LOGO=false
 
-
-RECAPTCHA_SITE_KEY=
-RECAPTCHA_SECRET_KEY=
-RECAPTCHA=false
-RECAPTCHA_SCORE_THRESHOLD=0.8
+BIND=0.0.0.0
